fix #45
