# docs/admin/admin_swagger.json
@@ -346,17 +346,20 @@
                         "token": []
                     }
                 ],
-                "description": "创建地址簿集合",
+                "description": "创建地址簿名称",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "创建地址簿集合",
+                "tags": [
+                    "地址簿名称"
+                ],
+                "summary": "创建地址簿名称",
                 "parameters": [
                     {
-                        "description": "地址簿集合信息",
+                        "description": "地址簿名称信息",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -400,17 +403,20 @@
                         "token": []
                     }
                 ],
-                "description": "地址簿集合删除",
+                "description": "地址簿名称删除",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "地址簿集合删除",
+                "tags": [
+                    "地址簿名称"
+                ],
+                "summary": "地址簿名称删除",
                 "parameters": [
                     {
-                        "description": "地址簿集合信息",
+                        "description": "地址簿名称信息",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -442,14 +448,17 @@
                         "token": []
                     }
                 ],
-                "description": "地址簿集合详情",
+                "description": "地址簿名称详情",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "地址簿集合详情",
+                "tags": [
+                    "地址簿名称"
+                ],
+                "summary": "地址簿名称详情",
                 "parameters": [
                     {
                         "type": "integer",
@@ -494,14 +503,17 @@
                         "token": []
                     }
                 ],
-                "description": "地址簿集合列表",
+                "description": "地址簿名称列表",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "地址簿集合列表",
+                "tags": [
+                    "地址簿名称"
+                ],
+                "summary": "地址簿名称列表",
                 "parameters": [
                     {
                         "type": "integer",
@@ -563,17 +575,20 @@
                         "token": []
                     }
                 ],
-                "description": "地址簿集合编辑",
+                "description": "地址簿名称编辑",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "地址簿集合编辑",
+                "tags": [
+                    "地址簿名称"
+                ],
+                "summary": "地址簿名称编辑",
                 "parameters": [
                     {
-                        "description": "地址簿集合信息",
+                        "description": "地址簿名称信息",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -617,17 +632,20 @@
                         "token": []
                     }
                 ],
-                "description": "创建地址簿集合规则",
+                "description": "创建地址簿规则",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "创建地址簿集合规则",
+                "tags": [
+                    "地址簿规则"
+                ],
+                "summary": "创建地址簿规则",
                 "parameters": [
                     {
-                        "description": "地址簿集合规则信息",
+                        "description": "地址簿规则信息",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -671,17 +689,20 @@
                         "token": []
                     }
                 ],
-                "description": "地址簿集合规则删除",
+                "description": "地址簿规则删除",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "地址簿集合规则删除",
+                "tags": [
+                    "地址簿规则"
+                ],
+                "summary": "地址簿规则删除",
                 "parameters": [
                     {
-                        "description": "地址簿集合规则信息",
+                        "description": "地址簿规则信息",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -713,14 +734,17 @@
                         "token": []
                     }
                 ],
-                "description": "地址簿集合规则详情",
+                "description": "地址簿规则详情",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "地址簿集合规则详情",
+                "tags": [
+                    "地址簿规则"
+                ],
+                "summary": "地址簿规则详情",
                 "parameters": [
                     {
                         "type": "integer",
@@ -765,14 +789,17 @@
                         "token": []
                     }
                 ],
-                "description": "地址簿集合规则列表",
+                "description": "地址簿规则列表",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "地址簿集合规则列表",
+                "tags": [
+                    "地址簿规则"
+                ],
+                "summary": "地址簿规则列表",
                 "parameters": [
                     {
                         "type": "integer",
@@ -840,17 +867,20 @@
                         "token": []
                     }
                 ],
-                "description": "地址簿集合规则编辑",
+                "description": "地址簿规则编辑",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "地址簿集合规则编辑",
+                "tags": [
+                    "地址簿规则"
+                ],
+                "summary": "地址簿规则编辑",
                 "parameters": [
                     {
-                        "description": "地址簿集合规则信息",
+                        "description": "地址簿规则信息",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -2004,6 +2034,51 @@
                 }
             }
         },
+        "/admin/peer/batchDelete": {
+            "post": {
+                "security": [
+                    {
+                        "token": []
+                    }
+                ],
+                "description": "批量设备删除",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "设备"
+                ],
+                "summary": "批量设备删除",
+                "parameters": [
+                    {
+                        "description": "设备id",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/admin.PeerBatchDeleteForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/admin/peer/create": {
             "post": {
                 "security": [
@@ -2068,7 +2143,7 @@
                         "token": []
                     }
                 ],
-                "description": "批量设备删除",
+                "description": "设备删除",
                 "consumes": [
                     "application/json"
                 ],
@@ -2078,15 +2153,15 @@
                 "tags": [
                     "设备"
                 ],
-                "summary": "批量设备删除",
+                "summary": "设备删除",
                 "parameters": [
                     {
-                        "description": "设备id",
+                        "description": "设备信息",
                         "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/admin.PeerBatchDeleteForm"
+                            "$ref": "#/definitions/admin.PeerForm"
                         }
                     }
                 ],
